# godot-cpp

./: .gitignore  CMakeLists.txt  SConstruct
.github/workflows/: ci.yml
cmake/: DetectHostArchitecture.cmake  DisableExceptions.cmake  GodotCompilerWarnings.cmake  SetGodotArch.cmake  SetGodotCompileFlags.cmake
test/: .gitignore  CMakeLists.txt  SConstruct  gdexample.gdnlib
